<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/mobile_navigation"
    app:startDestination="@id/converterFragment">
    <fragment
        android:id="@+id/exRatesFragment"
        android:name="com.example.exchanger.ui.ExRatesFragment"
        android:label="@string/label_toolbar_exchange"
        tools:layout="@layout/fragment_ex_rates"/>
    <fragment
        android:id="@+id/converterFragment"
        android:name="com.example.exchanger.ui.ConverterFragment"
        android:label="@string/label_toolbar_converter"
        tools:layout="@layout/fragment_converter"/>
    <fragment
        android:id="@+id/archiveFragment"
        android:name="com.example.exchanger.ui.ArchiveFragment"
        android:label="@string/label_toolbar_archive"
        tools:layout="@layout/fragment_archive"/>


</navigation>