<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/currency_drop_down_from"
        android:layout_width="105dp"
        android:layout_height="107dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/usd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/drop_down_description"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_from_field"
        android:layout_width="238dp"
        android:layout_height="85dp"
        android:hint="@string/input_hint"
        app:boxBackgroundColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"/>


    </com.google.android.material.textfield.TextInputLayout>


    <ImageButton
        android:id="@+id/change_currency"
        android:layout_width="54dp"
        android:layout_height="78dp"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/change_currency"
        android:contentDescription="@string/change_currency"
        android:rotationX="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/currency_drop_down_to"
        android:layout_width="105dp"
        android:layout_height="107dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="276dp"
        android:background="@drawable/uah"
        android:contentDescription="@string/drop_down_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputField_to"
        android:layout_width="238dp"
        android:layout_height="85dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="1200dp"
        android:layout_marginBottom="646dp"
        android:hint="@string/input_hint"
        app:boxBackgroundColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/input_from_field"
        app:layout_constraintStart_toEndOf="@+id/currency_drop_down_from"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />


    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>